fix 2nd paragraph text overflow

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -93,6 +93,11 @@ h1 {
   top: 220px;
 }
 
+/*class to help fit 2nd paragraph in white box*/
+.help {
+  padding-right: 1%;
+}
+
 /*Store buttons*/
 .store {
   margin-top: 5%;
